Ported echo_client to mbedTLS.

--- a/echo_client/CMakeLists.txt
+++ b/echo_client/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(echo_client main.cpp)
-target_link_libraries(echo_client -lssl -lcrypto -pthread)
+target_link_libraries(echo_client tls)
